Bug 517056.  Drawing an incomplete image to the canvas shouldn't throw; should instead silently do nothing.  r=vlad